src/test/deca/etapeB/invalid/binary_op_bool/geq_int_bool.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 9 : mauvais typage de l'inégalité
// 

{
    if(213 >= true){
     }
}
